fix text overflow

--- a/css/style.css
+++ b/css/style.css
@@ -99,10 +99,14 @@ h2{
   border-radius: 7px;
   min-height: 38px;
   max-width: 640px;
+  word-wrap: break-word;
 }
 
 .tarefa span{
   cursor: pointer;
+  width: 70vw;
+  max-width: 515px;
+  text-align: left;
 }
 #concluido{
   font-size: 1.2em;
